--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "mobx-react-lite": "^4.1.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-icons": "^5.5.0",
         "recharts": "^3.1.0"
     },
     "devDependencies": {
@@ -30,6 +29,7 @@
         "sass": "^1.89.2",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.35.1",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "vite-plugin-svgr": "^4.3.0"
     }
 }
